# PSAI

.devcontainer/: devcontainer.json
.github/: BUILD-INSTRUCTIONS.md  CONTRIBUTING.md  IMPLEMENTATION-TASK.md  agent-instructions.md  copilot-instructions.md
.github/workflows/: omniscient-ci.yml
omniscient-shell/: .gitignore  ADVANCED_FEATURES.md  Cargo.toml  FEATURE_FLAGS.md  IMPLEMENTATION.md  INTEGRATION.md  README.md  config.example.toml
omniscient-shell/examples/agents/: README.md
omniscient-shell/examples/agents/example-agent/: manifest.toml
omniscient-shell/src/: main.rs  oauth_shim.rs
omniscient-shell/src/agents/: capabilities.rs  event_protocol.rs  manifest.rs  mod.rs  native_runner.rs  registry.rs  runtime.rs  wasm_host.rs
omniscient-shell/src/graphics/: backend.rs  kitty_backend.rs  mod.rs  notcurses_backend.rs  overlay_backend.rs
omniscient-shell/src/media/: cache.rs  ffmpeg.rs  mod.rs  preview.rs
omniscient-shell/src/notifications/: channels.rs  mod.rs  notifier.rs  profiles.rs
omniscient-shell/src/oauth/: broker.rs  consent.rs  mod.rs  providers.rs  vault.rs
omniscient-shell/src/platform/: filesystem.rs  mod.rs  process.rs  sandbox.rs
omniscient-shell/src/security/: mod.rs
omniscient-shell/src/shell/: command_router.rs  history.rs  integration.rs  mod.rs  process_supervision.rs
omniscient-shell/src/state/: kv_store.rs  ledger.rs  migrations.rs  mod.rs  sqlite.rs
omniscient-shell/src/tui/: cards.rs  command_palette.rs  dashboard.rs  layout.rs  mod.rs  panes.rs  terminal_guard.rs  theme.rs
omniscient-shell/src/utils/: config.rs  errors.rs  logging.rs  mod.rs  telemetry.rs
omniscient-shell/src/workspace/: artifacts.rs  mod.rs  retention.rs  selection.rs
omniscient-shell/tests/: feature_flags_test.rs
