[package]
name = "omniscient-shell"
version = "0.1.0"
edition = "2021"
authors = ["PSAI Contributors"]
description = "Cross-platform AI-native companion shell extending PowerShell"
license = "MIT"

[[bin]]
name = "omniscient-shell"
path = "src/main.rs"

[[bin]]
name = "omni"
path = "src/main.rs"

[dependencies]
# Core dependencies
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }

# Config and validation
config = "0.14"
schemars = "0.8"
jsonschema = "0.18"

# TUI and graphics
crossterm = "0.28"
ratatui = "0.29"

# Graphics backends (optional)
notcurses = { version = "3.6", optional = true }
ncurses = { version = "5.101", optional = true }

# WASM runtime (optional)
wasmtime = { version = "26.0", optional = true, features = ["component-model"] }
wasmtime-wasi = { version = "26.0", optional = true }

# OAuth and security
oauth2 = { version = "4.4", optional = true }
keyring = { version = "3.6", optional = true }
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1.11", features = ["v4"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }

# Media processing
ffmpeg-next = { version = "7.0", optional = true }

# Platform-specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_JobObjects"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal"] }

[dev-dependencies]
tempfile = "3.13"

[features]
default = []
omniscience = ["dep:oauth2", "dep:keyring"]
notcurses = ["dep:notcurses"]
kitty = []
overlay = ["dep:ncurses"]
wasm = ["dep:wasmtime", "dep:wasmtime-wasi"]
native = []
media = ["dep:ffmpeg-next"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
